--- a/client/static/index.html
+++ b/client/static/index.html
@@ -10,17 +10,27 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.7/angular.min.js"></script>
 	<script src="/angular/angular-route.min.js"></script>
 	<script src="/app.js"></script> 
-
-
 	<script src="/factories/userFactory.js"></script>
 	<script src="/controllers/userController.js"></script>
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+	<link rel="stylesheet" href="css/custom.css">
+	<link href="https://afeld.github.io/emoji-css/emoji.css" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Dancing+Script" rel="stylesheet">
 </head>
-	<body id="container">
-		<h1>Login and Register</h1>
-		<a href="#/register">Register</a>
-		<a href="#/login">Login</a>
+<body id="container" class="video-wrap">
+	<video autoplay="" loop="" muted="">
+		<source src="videos/Walk.mp4" type="video/mp4">	
+		</video>
+		<div class="btn-group btn-group-justified" role="group" aria-label="...">
+  <div class="btn-group" role="group">
+    <a href="#/register"><button type="button" class="btn btn-default"> <i class="em em-cupid"></i> Sign Up</button></a>
+  </div>
+  <div class="btn-group" role="group">
+    <a href="#/login"><button type="button" class="btn btn-default"><i class="em em-heartbeat"></i> Sign In</button></a>
+  </div>
+</div>
 		<div ng-view=''>
 		</div>
-	</body>
+</body>
 </html>
 
