--- a/client/static/index.html
+++ b/client/static/index.html
@@ -13,14 +13,12 @@
 	<script src="/factories/userFactory.js"></script>
 	<script src="/controllers/userController.js"></script>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
-	<link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.0/themes/smoothness/jquery-ui.css">
-	<script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.0/jquery-ui.min.js"></script>
 
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 	<link rel="stylesheet" href="css/custom.css">
 	<link href="https://afeld.github.io/emoji-css/emoji.css" rel="stylesheet">
-	<link href="https://fonts.googleapis.com/css?family=Dancing+Script" rel="stylesheet">
-	<script type="text/javascript" src="js/form.js"></script>
+	<!-- Fonts -->
+	<link href="https://fonts.googleapis.com/css?family=Dancing+Script|Lobster|Pacifico" rel="stylesheet">
 </head>
 <body>
 	<div ng-view=''></div>
